# Crossfire

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  checkpoint.md  project_crossfire_spec.docx  pyproject.toml  status.md  tasks.md
benchmarks/: __init__.py  memory.py  perplexity.py  throughput.py
configs/: autopilot.yaml  hardware.yaml  models.yaml
docs/archive/: CROSSFIRE-X_Implementation_Spec.md  CROSSFIRE-X_Spec.docx
docs/plans/: 2026-04-24-gemma4-exo-pipeline-port.md
results/: t0612_mac_flashmoe_scout.json  t0612pc_smoke.json  t0613_pc_p0_baseline.json  t0614_mac_p0_baseline.json  t0615_pc_perplexity.json  t0615_t0616_mac.json  t0616_pc_power.json  t0617_p1_distributed_baseline.json
results/flashmoe_sidecar/gemma-4-26B-A4B/: manifest.json
scripts/: build_flash_moe.sh  run_experiment.sh  run_flashmoe_scout.py  run_gemma4_scout.py  run_t0617_p1.py  setup_mac.sh  setup_pc.sh
src/crossfire/: __init__.py
src/crossfire/ane/: __init__.py  draft_model.py  gemma4_assets.py  gemma4_chunked.py  gemma4_masks.py  power.py  speculative.py
src/crossfire/autopilot/: __init__.py  autopilot.py  bandit.py  config_loader.py  decision_tree.py  logger.py  pipeline_integration.py  policy.py  query_classifier.py  reward.py
src/crossfire/compression/: __init__.py  kvcache.py  triattention.py  turboquant.py
src/crossfire/distributed/: __init__.py  network.py  pipeline.py
tests/: test_ane.py  test_autopilot.py  test_decision_tree.py  test_flashmoe.py  test_gemma4_chunked.py  test_metrics.py  test_pipeline.py  test_policy.py  test_triattention.py
(+5 files in other folders)
